--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ button:active {
     100% { transform: rotate(360deg); }
   }
 
-/* Media Query: Tablet or smaller */
+/* Media Query: Tablet or Smaller */
 @media screen and (max-width: 1000px) {
     .quote-container {
         margin: auto 20px;
